--- a/docs/01_deploy_app_resources/01_01.md
+++ b/docs/01_deploy_app_resources/01_01.md
@@ -57,7 +57,7 @@ Navigate to your forked repository if you have not already. Then, start up a Git
 > If you are using an FDPO account, you should **not** use GitHub Codespaces for this lab. Instead, clone the repository to your local machine and ensure that you have necessary software installed.
 
 <details markdown="block">
-<summary><string>Expand this section to view software to install in lieu of using GitHub Codespaces</strong></summary>
+<summary><strong>Expand this section to view software to install in lieu of using GitHub Codespaces</strong></summary>
 
 Ensure that you have the following software installed:
 
