--- a/docs/06_add_genai_gateway_capabilities_with_api_management/06_02.md
+++ b/docs/06_add_genai_gateway_capabilities_with_api_management/06_02.md
@@ -238,7 +238,7 @@ To inspect the token consumption metrics emitted by the APIM policy in Applicati
 
 </details>
 
-## Bonus Task (if time allows)
+## Bonus Tasks (if time allows)
 
 This bonus task allows you to explore API Management's support of backend pools when you want to implement multiple backends for an API and load-balance requests across those backends. You will implement a load-balanced pool to distribute the LLM workload across two instances of Azure OpenAI.
 
