--- a/docs/06_add_genai_gateway_capabilities_with_api_management/06_01.md
+++ b/docs/06_add_genai_gateway_capabilities_with_api_management/06_01.md
@@ -41,6 +41,14 @@ In this task, you will import your Azure OpenAI service as an API in Azure API M
     {: .note }
     > The update may take up to 10 minutes before you see the change apply.
 
+2. If you receive a 500 internal server error indicating that the managed identity is not set to use authentication-managed-identity, first make sure that you have the following in the policy:
+
+    ```html
+    <authentication-managed-identity resource="https://cognitiveservices.azure.com/" />
+    ```
+
+    If that line is in the policy you have created, try [to add an OpenAPI specification for the Azure OpenAI REST API manually](https://learn.microsoft.com/en-us/azure/api-management/azure-openai-api-from-specification#option-2-add-an-openapi-specification-to-api-management).
+
 ## Key Tasks
 
 ### 01: Import Azure OpenAI service resource
