managed ID support in streamlit dash

--- a/docs/01_deploy_app_resources/01_02.md
+++ b/docs/01_deploy_app_resources/01_02.md
@@ -135,7 +135,7 @@ Update the front-end code in `src/ContosoSuitesDashboard/` to enable chat operat
       3. Copy the value of **Default domain** and save it for later (and include `https://` if it is not there when you copy the value). You will need to change the value of `[api][endpoint]` to this URL when you deploy the Streamlit application to Azure App Services, so you will need this URL in the next task.
    6. For Cosmos DB secrets:
       1. Return to the resource group and select the Azure Cosmos DB account.
-      2. In the **Settings** menu, navigate to the **Keys** option. Copy the value of **URI** and save it as `endpoint` in the `[cosmos]` section of your secrets file. Copy the value of **PRIMARY KEY** and save it as the `key` secret.
+      2. In the **Settings** menu, navigate to the **Keys** option. Copy the value of **URI** and save it as `endpoint` in the `[cosmos]` section of your secrets file.
 
 2. Open the file `src/ContosoSuitesDashboard/pages/1_Chat_with_Data.py`. The code will run as-is, but will not have knowledge of your search index. To support chat with data, make the following changes to the Python script.
    1. Add the search secrets to the `create_chat_completion()` function, below the Azure OpenAI secrets and above the call to create a client.
