--- a/docs/04_implement_audio_transcription/04_03.md
+++ b/docs/04_implement_audio_transcription/04_03.md
@@ -69,12 +69,14 @@ def make_azure_openai_embedding_request(text):
     """Create and return a new embedding request. Key assumptions:
     - Azure OpenAI endpoint, key, and deployment name stored in Streamlit secrets."""
 
+    token_provider = get_bearer_token_provider(
+        DefaultAzureCredential(), "https://cognitiveservices.azure.com/.default"
+    )
     aoai_endpoint = st.secrets["aoai"]["endpoint"]
-    aoai_key = st.secrets["aoai"]["key"]
     aoai_embedding_deployment_name = st.secrets["aoai"]["embedding_deployment_name"]
 
     client = openai.AzureOpenAI(
-        api_key=aoai_key,
+        azure_ad_token_provider=token_provider,
         api_version="2024-06-01",
         azure_endpoint = aoai_endpoint
     )
@@ -160,12 +162,14 @@ def make_azure_openai_embedding_request(text):
     """Create and return a new embedding request. Key assumptions:
     - Azure OpenAI endpoint, key, and deployment name stored in Streamlit secrets."""
 
+    token_provider = get_bearer_token_provider(
+        DefaultAzureCredential(), "https://cognitiveservices.azure.com/.default"
+    )
     aoai_endpoint = st.secrets["aoai"]["endpoint"]
-    aoai_key = st.secrets["aoai"]["key"]
     aoai_embedding_deployment_name = st.secrets["aoai"]["embedding_deployment_name"]
 
     client = openai.AzureOpenAI(
-        api_key=aoai_key,
+        azure_ad_token_provider=token_provider,
         api_version="2024-06-01",
         azure_endpoint = aoai_endpoint
     )
