--- a/docs/02_implement_function_calls/02_01.md
+++ b/docs/02_implement_function_calls/02_01.md
@@ -62,14 +62,13 @@ If you have a tool such as SQL Server Management Studio or Azure Data Studio alr
 
 ### 03: Create a local connection string
 
-Add the `ContosoSuites` connection string to your local `src/ContosoSuitesWebAPI/appsettings.json` file for your Azure SQL DB. Use Active Directory Default authentication.
+Update the `ContosoSuites` connection string in your local `src/ContosoSuitesWebAPI/appsettings.json` file for your Azure SQL DB. Use Active Directory Default authentication.
 
 <details markdown="block">
 <summary><strong>Expand this section to view the solution</strong></summary>
 
 1. Open your local `src/ContosoSuitesWebAPI/appsettings.json` file.
-2. Add a `ConnectionStrings` property at the root level.
-3. Add a property under **ConnectionStrings** called `ContosoSuites` with the connection string from your Azure SQL DB.
+2. Update the **{your server}** value inside the `ContosoSuites` connection string with your Azure SQL DB server name.
 
 The complete appsettings.json file should look like this:
 
