--- a/docs/03_implement_vector_search_in_cosmos_db_nosql/03_02.md
+++ b/docs/03_implement_vector_search_in_cosmos_db_nosql/03_02.md
@@ -114,6 +114,7 @@ To create a `local.settings.json` file, navigate to the `src\ContosoSuitesVector
     "AzureOpenAIKey": "[YOUR_AZURE_OPENAI_KEY]",
     "CosmosDBConnection__accountEndpoint": "[YOUR_COSMOS_DB_ENDPOINT]",
     "CosmosDBConnection__clientId": "[USER_ASSIGNED_MANAGED_IDENTITY_CLIENT_ID]",
+    "CosmosDBConnection__credential": "managedidentity",
     "EmbeddingDeploymentName": "text-embedding-ada-002"
   }
 }
