add AZURE_TENANT_ID to local.settings.json example

--- a/docs/03_implement_vector_search_in_cosmos_db_nosql/03_02.md
+++ b/docs/03_implement_vector_search_in_cosmos_db_nosql/03_02.md
@@ -110,6 +110,7 @@ To create a `local.settings.json` file, navigate to the `src\ContosoSuitesVector
   "Values": {
     "AzureWebJobsStorage": "",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
+    "AZURE_TENANT_ID": "[YOUR_AZURE_TENANT_ID]",
     "AzureOpenAIEndpoint": "[YOUR_AZURE_OPENAI_ENDPOINT]",
     "AzureOpenAIKey": "[YOUR_AZURE_OPENAI_KEY]",
     "CosmosDBConnection__accountEndpoint": "[YOUR_COSMOS_DB_ENDPOINT]",
