Update To support the DatabaseService now includes a creation parameter.
The update on 12/14/2024 of having the DatabaseService take a parameter means that the kernalBuilder can't register the plugin using AddFromType<>.   Changed to use the builder to grab the service and then add it to the Kernel using AddFromObject instead.

--- a/docs/02_implement_function_calls/02_02.md
+++ b/docs/02_implement_function_calls/02_02.md
@@ -89,7 +89,7 @@ public async Task<IEnumerable<Booking>> GetBookingsMissingHotelRooms()
                 );
             """;
         using var conn = new SqlConnection(
-            connectionString: Environment.GetEnvironmentVariable("SQLAZURECONNSTR_ContosoSuites")!
+            connectionString: connectionString!
         );
         conn.Open();
         using var cmd = new SqlCommand(sql, conn);
@@ -136,7 +136,7 @@ public async Task<IEnumerable<Booking>> GetBookingsWithMultipleHotelRooms()
                 ) > 1;
             """;
         using var conn = new SqlConnection(
-            connectionString: Environment.GetEnvironmentVariable("SQLAZURECONNSTR_ContosoSuites")!
+            connectionString: connectionString!
         );
         conn.Open();
         using var cmd = new SqlCommand(sql, conn);
@@ -264,7 +264,8 @@ builder.Services.AddSingleton<Kernel>((_) =>
         endpoint: builder.Configuration["AzureOpenAI:Endpoint"]!,
         apiKey: builder.Configuration["AzureOpenAI:ApiKey"]!
     );
-    kernelBuilder.Plugins.AddFromType<DatabaseService>();
+    var databaseService = _.GetRequiredService<IDatabaseService>();
+    kernelBuilder.Plugins.AddFromObject(databaseService);
     return kernelBuilder.Build();
 });
 ```
