--- a/docs/02_implement_function_calls/02_02.md
+++ b/docs/02_implement_function_calls/02_02.md
@@ -323,7 +323,7 @@ app.MapPost("/Chat", async Task<string> (HttpRequest request) =>
 
 ### 09: Deploy to App Service
 
-Deploy your App Service code changes and ensure they propagate to Azure App Services. Then, add a three new environment variables to the App Service: `AzureOpenAI__DeploymentName`, `AzureOpenAI__Endpoint`, and `AzureOpenAI__ApiKey`. These environment variables should have **two** underscores between "AzureOpenAI" and the name.
+Deploy your App Service code changes and ensure they propagate to Azure App Services. Then, add a three new environment variables to the App Service: `AzureOpenAI__ApiKey`. This environment variables should have **two** underscores between "AzureOpenAI" and the name.
 
 {: .important }
 > In a production environment, it would be better to save these as secrets in Azure Key Vault and then enable a managed identity to access the Key Vault secrets from your App Service. The reason for this is, with the current configuration, anyone with access to manage the App Service can view the deployment name, endpoint, and API key secrets.
@@ -336,7 +336,7 @@ In order to create an environment variable for your App Service, perform the fol
 
     ![Creating a new environment variable for an Azure App Service](../../media/Solution/0202_AddEnvironmentVariable1.png)
 
-2. Create three environment variables. The first is `AzureOpenAI__DeploymentName` and should have a value of `gpt-4o`. The second is   `AzureOpenAI__Endpoint` and should have a value of your Azure OpenAI endpoint URL. The third is `AzureOpenAI__ApiKey` and should have a value of   your Azure OpenAI API key. After entering data for an application setting, select **Apply** to save the setting.
+2. Create the`AzureOpenAI__ApiKey` which should have a value of   your Azure OpenAI API key. After entering data for an application setting, select **Apply** to save the setting.
 
     ![Filling in details for the new environment variable for an Azure App Service](../../media/Solution/0202_AddEnvironmentVariable2.png)
 
