--- a/docs/03_implement_vector_search_in_cosmos_db_nosql/03_03.md
+++ b/docs/03_implement_vector_search_in_cosmos_db_nosql/03_03.md
@@ -47,7 +47,8 @@ Add a new .NET user secret called `CosmosDB:ConnectionString`. This value should
 To add the user secrets, run the following command:
 
   ```sh
-  dotnet user-secrets set "CosmosDB:ConnectionString" "{YOUR_CONNECTION_STRING}"
+  dotnet user-secrets set "CosmosDB:AccountEndpoint" "{YOUR_COSMOSDB_URI}"
+  dotnet user-secrets set "CosmosDB:ClientId" "{YOUR_CLIENT_ID_FROM_RESOUREC_GROUP}"
   dotnet user-secrets set "CosmosDB:DatabaseName" "ContosoSuites"
   dotnet user-secrets set "CosmosDB:MaintenanceRequestsContainerName" "MaintenanceRequests"
   dotnet user-secrets set "AzureOpenAI:EmbeddingDeploymentName" "text-embedding-ada-002"
