--- a/docs/03_implement_vector_search_in_cosmos_db_nosql/03_03.md
+++ b/docs/03_implement_vector_search_in_cosmos_db_nosql/03_03.md
@@ -39,7 +39,7 @@ In the previous task, you added vector embeddings to property maintenance reques
 
 ### 01: Add user secrets
 
-Add new .NET user secrets called `CosmosDB:AccountEndpoint` and `CosmosDB:ClientId`. These values should be your Cosmos DB URI and your Managed Identity Client ID. Add a third user secret called `AzureOpenAI:EmbeddingDeploymentName`, which should take on a value of `text-embedding-ada-002`.
+Add new .NET user secrets called `CosmosDB__AccountEndpoint` and `AZURE_CLIENT_ID`. These values should be your Cosmos DB URI and your Managed Identity Client ID. Add a third user secret called `AzureOpenAI:EmbeddingDeploymentName`, which should take on a value of `text-embedding-ada-002`.
 
 <details markdown="block">
 <summary><strong>Expand this section to view the solution</strong></summary>
@@ -47,8 +47,8 @@ Add new .NET user secrets called `CosmosDB:AccountEndpoint` and `CosmosDB:Client
 To add the user secrets, run the following command:
 
   ```sh
-  dotnet user-secrets set "CosmosDB:AccountEndpoint" "{YOUR_COSMOSDB_URI}"
-  dotnet user-secrets set "CosmosDB:ClientId" "{YOUR_CLIENT_ID_FROM_RESOUREC_GROUP}"
+  dotnet user-secrets set "CosmosDB__AccountEndpoint" "{YOUR_COSMOSDB_URI}"
+  dotnet user-secrets set "AZURE_CLIENT_ID" "{YOUR_CLIENT_ID_FROM_RESOUREC_GROUP}"
   dotnet user-secrets set "CosmosDB:DatabaseName" "ContosoSuites"
   dotnet user-secrets set "CosmosDB:MaintenanceRequestsContainerName" "MaintenanceRequests"
   dotnet user-secrets set "AzureOpenAI:EmbeddingDeploymentName" "text-embedding-ada-002"
