--- a/docs/03_implement_vector_search_in_cosmos_db_nosql/03_03.md
+++ b/docs/03_implement_vector_search_in_cosmos_db_nosql/03_03.md
@@ -47,7 +47,7 @@ Add new .NET user secrets called `CosmosDB__AccountEndpoint` and `AZURE_CLIENT_I
 To add the user secrets, run the following command:
 
   ```sh
-  dotnet user-secrets set "CosmosDB__AccountEndpoint" "{YOUR_COSMOSDB_URI}"
+  dotnet user-secrets set "CosmosDB:AccountEndpoint" "{YOUR_COSMOSDB_URI}"
   dotnet user-secrets set "AZURE_CLIENT_ID" "{YOUR_CLIENT_ID_FROM_RESOUREC_GROUP}"
   dotnet user-secrets set "CosmosDB:DatabaseName" "ContosoSuites"
   dotnet user-secrets set "CosmosDB:MaintenanceRequestsContainerName" "MaintenanceRequests"
