Lab 4 corrections and a few typo repairs

--- a/docs/01_deploy_app_resources/01_02.md
+++ b/docs/01_deploy_app_resources/01_02.md
@@ -128,6 +128,7 @@ Update the front-end code in `src/ContosoSuitesDashboard/` to enable chat operat
    6. For Cosmos DB secrets:
       1. Return to the resource group and select the Azure Cosmos DB account.
       2. In the **Settings** menu, navigate to the **Keys** option. Copy the value of **URI** and save it as `endpoint` in the `[cosmos]` section of your secrets file.
+      3. Find and copy the **ClientId** of the User-Assigned Managed Identity in your resource group. Paste it as the `client_id` value in the `[cosmos]` file
 
 2. Open the file `src/ContosoSuitesDashboard/pages/1_Chat_with_Data.py`. The code will run as-is, but will not have knowledge of your search index. To support chat with data, make the following changes to the Python script.
    1. Add the search secrets to the `create_chat_completion()` function, below the Azure OpenAI secrets and above the call to create a client.
