--- a/docs/04_implement_audio_transcription/04_03.md
+++ b/docs/04_implement_audio_transcription/04_03.md
@@ -129,15 +129,17 @@ def save_transcript_to_cosmos_db(transcript_item):
     """Save embeddings to Cosmos DB vector store. Key assumptions:
     - transcript_item is a JSON object containing call_id (int), 
         call_transcript (string), and request_vector (list).
-    - Cosmos DB endpoint, key, and database name stored in Streamlit secrets."""
+    - Cosmos DB endpoint, client_id, and database name stored in Streamlit secrets."""
+
+    cosmos_client_id = st.secrets["cosmos"]["client_id"]
+    cosmos_credentials = DefaultAzureCredential(managed_identity_client_id=cosmos_client_id)
 
     cosmos_endpoint = st.secrets["cosmos"]["endpoint"]
-    cosmos_key = st.secrets["cosmos"]["key"]
     cosmos_database_name = st.secrets["cosmos"]["database_name"]
     cosmos_container_name = "CallTranscripts"
 
     # Create a CosmosClient
-    client = CosmosClient(url=cosmos_endpoint, credential=cosmos_key)
+    client = CosmosClient(url=cosmos_endpoint, credential=cosmos_credentials)
     # Load the Cosmos database and container
     database = client.get_database_client(cosmos_database_name)
     container = database.get_container_client(cosmos_container_name)
@@ -195,10 +197,12 @@ The completed version of the `make_cosmos_db_vector_search_request()` function i
 def make_cosmos_db_vector_search_request(query_embedding, max_results=5,minimum_similarity_score=0.5):
     """Create and return a new vector search request. Key assumptions:
     - Query embedding is a list of floats based on a search string.
-    - Cosmos DB endpoint, key, and database name stored in Streamlit secrets."""
+    - Cosmos DB endpoint, client_id, and database name stored in Streamlit secrets."""
+
+    cosmos_client_id = st.secrets["cosmos"]["client_id"]
+    cosmos_credentials = DefaultAzureCredential(managed_identity_client_id=cosmos_client_id)
 
     cosmos_endpoint = st.secrets["cosmos"]["endpoint"]
-    cosmos_key = st.secrets["cosmos"]["key"]
     cosmos_database_name = st.secrets["cosmos"]["database_name"]
     cosmos_container_name = "CallTranscripts"
 
@@ -206,7 +210,7 @@ def make_cosmos_db_vector_search_request(query_embedding, max_results=5,minimum_
     client = CosmosClient(url=cosmos_endpoint, credential=cosmos_key)
     # Load the Cosmos database and container
     database = client.get_database_client(cosmos_database_name)
-    container = database.get_container_client(cosmos_container_name)
+    container = database.get_container_client(cosmos_credentials)
 
     results = container.query_items(
         query=f"""
