Update the sample code to work with the Client ID based connection to CosmosDb

--- a/docs/05_enhance_api_with_semantic_kernel/05_02.md
+++ b/docs/05_enhance_api_with_semantic_kernel/05_02.md
@@ -137,35 +137,42 @@ To configure the maintenance request and database plugins:
    4. The complete `builder.Service.AddSingleton<Kernel>` method should now look like the following:
 
       ```csharp
-      builder.Services.AddSingleton<Kernel>((_) =>
-      {
-          IKernelBuilder kernelBuilder = Kernel.CreateBuilder();
-          kernelBuilder.AddAzureOpenAIChatCompletion(
-              deploymentName: builder.Configuration["AzureOpenAI:DeploymentName"]!,
-              endpoint: builder.Configuration["AzureOpenAI:Endpoint"]!,
-              apiKey: builder.Configuration["AzureOpenAI:ApiKey"]!
-          );
-      #pragma warning disable SKEXP0010 // Type is for evaluation purposes only and is subject to change or removal in future updates. Suppressthis diagnostic to proceed.
-          kernelBuilder.AddAzureOpenAITextEmbeddingGeneration(
-              deploymentName: builder.Configuration["AzureOpenAI:EmbeddingDeploymentName"]!,
-              endpoint: builder.Configuration["AzureOpenAI:Endpoint"]!,
-              apiKey: builder.Configuration["AzureOpenAI:ApiKey"]!
-          );
-      #pragma warning restore SKEXP0010 // Type is for evaluation purposes only and is subject to change or removal in future updates. Suppressthis diagnostic to proceed.
-  
-          kernelBuilder.Plugins.AddFromType<DatabaseService>();
-          kernelBuilder.Plugins.AddFromType<MaintenanceRequestPlugin>("MaintenanceCopilot");
-  
-          kernelBuilder.Services.AddSingleton<CosmosClient>((_) =>
-          {
-              CosmosClient client = new(
-                  connectionString: builder.Configuration["CosmosDB:ConnectionString"]!
-              );
-              return client;
-          });
-  
-          return kernelBuilder.Build();
-      });
+     builder.Services.AddSingleton<Kernel>((_) =>
+        {
+        IKernelBuilder kernelBuilder = Kernel.CreateBuilder();
+        kernelBuilder.AddAzureOpenAIChatCompletion(
+            deploymentName: builder.Configuration["AzureOpenAI:DeploymentName"]!,
+            endpoint: builder.Configuration["AzureOpenAI:Endpoint"]!,
+            apiKey: builder.Configuration["AzureOpenAI:ApiKey"]!
+        );
+        var databaseService = _.GetRequiredService<IDatabaseService>();
+        kernelBuilder.Plugins.AddFromObject(databaseService);
+
+        #pragma warning disable SKEXP0010 // Type is for evaluation purposes only and is subject to change or removal in future updates. Suppress this diagnostic to proceed.
+            kernelBuilder.AddAzureOpenAITextEmbeddingGeneration(
+                deploymentName: builder.Configuration["AzureOpenAI:EmbeddingDeploymentName"]!,
+                endpoint: builder.Configuration["AzureOpenAI:Endpoint"]!,
+                apiKey: builder.Configuration["AzureOpenAI:ApiKey"]!
+            );
+        #pragma warning restore SKEXP0010 // Type is for evaluation purposes only and is subject to change or removal in future updates. Suppress this diagnostic to proceed.
+
+        kernelBuilder.Plugins.AddFromType<MaintenanceRequestPlugin>("MaintenanceCopilot");
+        kernelBuilder.Services.AddSingleton<CosmosClient>((_) =>
+            {
+                string userAssignedClientId = builder.Configuration["AZURE_CLIENT_ID"]!;
+                var credential = new DefaultAzureCredential(
+                    new DefaultAzureCredentialOptions
+                    {
+                        ManagedIdentityClientId = userAssignedClientId
+                    });
+                CosmosClient client = new(
+                    accountEndpoint: builder.Configuration["CosmosDB:AccountEndpoint"]!,
+                    tokenCredential: credential
+                );
+                return client;
+            });
+            return kernelBuilder.Build();
+        });
       ```
 
 The `DatabaseService` plugin was already defined in a previous exercise, so just a small change needs to be completed to allow your agent to use it.
