--- a/docs/05_enhance_api_with_semantic_kernel/05_02.md
+++ b/docs/05_enhance_api_with_semantic_kernel/05_02.md
@@ -123,13 +123,22 @@ To configure the maintenance request and database plugins:
    3. Because the `MaintenanceRequestPlugin` uses dependency injection to provide a `CosmosClient`, you must add a singleton instance of the that client within your `Kernel` service definition. Do that by adding the following code just below the plugin line you just added:
 
       ```csharp
-      kernelBuilder.Services.AddSingleton<CosmosClient>((_) =>
-      {
-          CosmosClient client = new(
-              connectionString: builder.Configuration["CosmosDB:ConnectionString"]!
-          );
-          return client;
-      });
+        kernelBuilder.Services.AddSingleton<CosmosClient>((_) =>
+            {
+                string userAssignedClientId = builder.Configuration["AZURE_CLIENT_ID"]!;
+                var credential = new DefaultAzureCredential(
+                    new DefaultAzureCredentialOptions
+                    {
+                        ManagedIdentityClientId = userAssignedClientId
+                    });
+                CosmosClient client = new(
+                    accountEndpoint: builder.Configuration["CosmosDB:AccountEndpoint"]!,
+                    tokenCredential: credential
+                );
+                return client;
+            });
+            return kernelBuilder.Build();
+        });
       ```
 
       This code is a bit redundant with the `CosmosClient` code earlier in the `Program.cs` file. However, the service must be included within the `Kernel` service definition, or it will not be accessible to the plugin.
