change local by Development

--- a/docs/02_implement_function_calls/02_01.md
+++ b/docs/02_implement_function_calls/02_01.md
@@ -62,15 +62,15 @@ If you have a tool such as SQL Server Management Studio or Azure Data Studio alr
 
 ### 03: Create a local connection string
 
-Create the `ContosoSuites` connection string in your local `src/ContosoSuitesWebAPI/appsettings.local.json` file for your Azure SQL DB. Use Active Directory Default authentication.
+Create the `ContosoSuites` connection string in your local `src/ContosoSuitesWebAPI/appsettings.Development.json` file for your Azure SQL DB. Use Active Directory Default authentication.
 
 <details markdown="block">
 <summary><strong>Expand this section to view the solution</strong></summary>
 
-1. Create a new  local `src/ContosoSuitesWebAPI/appsettings.local.json` file.
+1. Create a new  local `src/ContosoSuitesWebAPI/appsettings.Development.json` file.
 2. Update the **{your server}** value inside the `ContosoSuites` connection string with your Azure SQL DB server name.
 
-The complete appsettings.local.json file should look like this:
+The complete `appsettings.Development.json` file should look like this:
 
 ```json
 {
