added solution code for 05 and 06

--- a/docs/01_deploy_app_resources/01_01.md
+++ b/docs/01_deploy_app_resources/01_01.md
@@ -134,6 +134,9 @@ In order to install requirements, make sure that you are in a terminal connected
 
 ### 05: Sign in to your Azure Tools
 
+<details markdown="block">
+<summary><strong>Expand this section to view the solution</strong></summary>
+    
 1. Using the **Terminal** window in VS Code, execute the following commands to login:
 
 ```bash
@@ -143,8 +146,12 @@ azd auth login
 {: .note }
 > If you wish to use a subscription that does not belong to the **home** tenant of your user account, specify your TenantId by using the `--tenant <yourtenantid>` flag.
 
+</details>
 
 ### 06: Deploy Azure resources
+
+<details markdown="block">
+<summary><strong>Expand this section to view the solution</strong></summary>
 
 1. Using the **Terminal** window in VSCode, start the Azure Developer deployment process by running:
 ```bash
@@ -166,3 +173,5 @@ azd up
     > You may receive an error while running this that you must accept the Responsible AI Notice before creating a TextAnalytics (Language) service. To do so, open the [Azure Portal](https://portal.azure.com/) and search for "Language" in the menu. Choose the **Language** service and then select Create. On the first page of the form, select the **Continue to create your resource** button at the bottom of the screen. Then, check the box certifying that you have reviewed and acknowledge the terms in the Responsible AI Notice. You can then close the Create Language page and try running the Bicep script again.
 
 6. Once your deployment completes (about 5-10 minutes), you should see all of your resources in a new resource group based on your environment name (i.e. rg-techexcel1). These include: an API Management service, an App Service (for API), an App Service (for dashboard), an App Service plan (for API and dashboard), an App Service plan (for Function app), an Application Insights instance, an Azure Cosmos DB account, an Azure OpenAI workspace, a Container registry, a Function App, a Language service, a Log Analytics workspace, a Search service, a Speech service, a SQL database, a SQL server, and a Storage account.
+
+</details>
